# yt-mcp-server-odoo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/yt_mcp_server_odoo/: __init__.py  __main__.py  config.py  odoo_connection.py  server.py
