[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-mcp-server-odoo"
version = "0.1.2"
description = "MCP Server for Odoo - Enable AI assistants to interact with Odoo ERP"
readme = "README.md"
license = "LGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "YugmaTech", email = "hello@yugmatech.com" }
]
keywords = ["odoo", "mcp", "ai", "claude", "cursor", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.9.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
yt-mcp-server-odoo = "yt_mcp_server_odoo.__main__:main"

[project.urls]
Homepage = "https://yugmatech.com"
Repository = "https://github.com/yugmatech/yt-mcp-server-odoo"
Documentation = "https://apps.odoo.com/apps/modules/19.0/yt_mcp_server"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_mcp_server_odoo"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
